authz-cluster-1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: authz-ns
  labels:
    istio-injection: enabled
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: authz
  namespace: authz-ns
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: authz
        cluster: cluster-1
    spec:
      serviceAccountName: authz-sa
      containers:
      - name: authz-container
        image: docker.io/mukeshkhattar/ext-authz-server
        volumeMounts:
        - name: keyfile
          mountPath: "/data/certs"
          readOnly: true
        imagePullPolicy: Always
        ports:
        - containerPort: 50051
        livenessProbe:
          exec:
            command: ["ls","/app/grpc_server"]
          initialDelaySeconds: 10
        readinessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:50051"]
          initialDelaySeconds: 10
      volumes:
      - name: keyfile
        secret:
          secretName: svc-secret
---
apiVersion: v1
kind: Service
metadata:
  name: authz
  namespace: authz-ns
  labels:
    app: authz
spec:
  ports:
  - port: 50051
    targetPort: 50051
    name: grpc
  selector:
    app: authz
