svc1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: svc1-ns
  labels:
    istio-injection: enabled 
---
apiVersion: v1
kind: Service
metadata:
  name: svc1
  namespace: svc1-ns
  labels:
    app: svc1
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: svc1
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: svc1
  namespace: svc1-ns
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: svc1
    spec:
      serviceAccountName: svc1-sa
      containers:
      - name: svc1-container
        image: docker.io/mukeshkhattar/svc1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
