ing-authzsvc-authz.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: ing-authz-authz-policy
 namespace: authz-ns
spec:
 selector:
   matchLabels:
     app: authz
 rules:
 - from:
   - source:
       principals: ["cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"]
