ing-svc1-authz.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: ing-svc1-authz-policy
 namespace: svc1-ns
spec:
 action: ALLOW
 selector:
   matchLabels:
     app: svc1
 rules:
 - from:
   - source:
       principals: ["cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"]
   to:
   - operation:
       methods: ["GET"]
   when:
   - key: request.auth.claims[groups]
     values: ["svc1-group"]
